<resources>
    <string name="app_name">test_task</string>
    <string name="title_activity_count">CountActivity</string>
    <string name="fragment_name_tv">Name: %1$s</string>
    <string name="fragment_age_tv">Age: %1$d</string>
    <string name="fragment_is_student_tv">Is student: %1$b</string>
    <string name="is_student">Is student:</string>
    <string name="add_user">Add user</string>
    <string-array name="is_student_choices">
        <item>false</item>
        <item>true</item>
    </string-array>
    <string name="name_hint">Name</string>
    <string name="age_input">Age</string>
    <string name="date_of_birth_button_text">Date of birth</string>
    <string name="create_button_text">Create</string>
    <string name="fragment_date_of_birth_tv">Date of birth: %1$s</string>
    <string name="shibe_photo">Shibe photo</string>
</resources>