<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/Theme.TestTask.ItemTheme"
    android:background="@drawable/user_item_background"
    android:padding="10dp">

    <TextView
        style="@style/textView"
        android:id="@+id/fragment_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/fragment_name_tv" />

    <TextView
        style="@style/textView"
        android:id="@+id/fragment_user_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/fragment_age_tv" />

    <TextView
        style="@style/textView"
        android:id="@+id/fragment_user_is_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/fragment_is_student_tv" />

</LinearLayout>