<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/Theme.TestTask.ItemTheme"
    android:background="@drawable/user_item_background"
    android:padding="10dp"
    android:gravity="center_horizontal">

    <EditText
        style="@style/textView"
        android:id="@+id/name_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:hint="@string/name_hint"
        android:autofillHints="@string/name_hint"
        android:inputType="textPersonName" />

    <EditText
        style="@style/textView"
        android:id="@+id/age_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/white"
        android:hint="@string/age_input"
        android:autofillHints="@string/age_input"
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/date_picker"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/roboto"
        android:layout_margin="10dp"
        android:gravity="start"
        style="@style/Theme.TestTask.SqueezedButton"
        android:background="@color/transparent"
        android:text="@string/date_of_birth_button_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        style="@style/button"
        android:background="@drawable/button_background"
        android:text="@string/create_button_text"/>

</LinearLayout>